Revert "Stop transitioning visibility"
This reverts commit fcacfd789a0aacf1bb73e59ba3020590c4d8a88b.

--- a/packages/itwinui-css/src/dialog/dialog.scss
+++ b/packages/itwinui-css/src/dialog/dialog.scss
@@ -43,7 +43,9 @@ $iui-dialog-min-height: 7.75rem; // 7.75rem = 124px = title bar height + margins
     opacity: 0;
   }
 
-  transition: opacity var(--iui-duration-1) ease-out;
+  transition:
+    visibility var(--iui-duration-0) linear var(--iui-duration-1),
+    opacity var(--iui-duration-1) ease-out;
 
   &.iui-dialog-visible {
     visibility: visible;
@@ -52,6 +54,7 @@ $iui-dialog-min-height: 7.75rem; // 7.75rem = 124px = title bar height + margins
 
   @keyframes iui-fade-in {
     from {
+      visibility: hidden;
       opacity: 0;
     }
   }
@@ -115,6 +118,7 @@ $iui-dialog-min-height: 7.75rem; // 7.75rem = 124px = title bar height + margins
 
   @media (prefers-reduced-motion: no-preference) {
     transition:
+      visibility var(--iui-duration-0) linear var(--iui-duration-2),
       opacity var(--iui-duration-0) linear var(--iui-duration-2),
       transform var(--iui-duration-1) ease-in;
 
